syntax = "proto3";

package server2N;

message User{
	int32 id = 1;

	message Action {
		int32 type = 2;
		int32 posX = 3;
		int32 posY = 4;
		int32 speed = 5;
		enum ACTION_TYPE
		{
			MOVE = 0;
			JUMP = 1;
		}

	}

	enum SEND_TYPE
	{	
		INTERPOLATION = 0;
		EVENT_SEND = 1;
	}

}


message CONECT_STATUS{
	int32 id = 1;
	int32 type = 2;

	enum CONNECT_STATUS
	{
		FAIL = 0;
		REQUEST = 98;
		RESPONSE = 99;
		CONNECT = 100;
		DISCONNECT = 101;
	}

}
